--- a/app/src/views/home/login.ejs
+++ b/app/src/views/home/login.ejs
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
-    <script src="/js/home/login.js"></script>
+    <script src="/js/home/login.js" defer></script>
     <title>Document</title>
   </head>
   <body>
-    <input type="text" placeholder="아이디" /><br />
-    <input type="text" placeholder="비번" /><br />
+    <input id="id" type="text" placeholder="아이디" /><br />
+    <input id="pw" type="text" placeholder="비번" /><br />
     <button>로그인</button>
   </body>
 </html>
